--- a/DigitalHealthcare/.settings/org.eclipse.wst.common.component
+++ b/DigitalHealthcare/.settings/org.eclipse.wst.common.component
@@ -10,6 +10,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/CISDataCommon"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/CISCommunication"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/AdminViewPlans"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/EditSchedulePlan"/>
         <property name="context-root" value="DigitalHealthcare"/>
         <property name="java-output-path" value="/DigitalHealthcare/target/classes"/>
     </wb-module>
