--- a/DigitalHealthcare/.settings/org.eclipse.wst.common.component
+++ b/DigitalHealthcare/.settings/org.eclipse.wst.common.component
@@ -14,6 +14,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/SaveStaffmember"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/GetStaffMemberDetails"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/UpdateStaffDetails"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/CreateSchedule"/>
         <property name="context-root" value="DigitalHealthcare"/>
         <property name="java-output-path" value="/DigitalHealthcare/target/classes"/>
     </wb-module>
