--- a/DigitalHealthcare/.settings/org.eclipse.wst.common.component
+++ b/DigitalHealthcare/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="DigitalHealthcare">
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/CommonCISValidation"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/CISSessions"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/CISDataCommon"/>
@@ -15,6 +12,10 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/GetStaffMemberDetails"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/UpdateStaffDetails"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/CreateSchedule"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/DeleteStaffMember"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/DeleteSchedulePlan"/>
         <property name="context-root" value="DigitalHealthcare"/>
         <property name="java-output-path" value="/DigitalHealthcare/target/classes"/>
     </wb-module>
