--- a/DigitalHealthcare/.settings/org.eclipse.wst.common.component
+++ b/DigitalHealthcare/.settings/org.eclipse.wst.common.component
@@ -17,6 +17,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/DeleteSchedulePlan"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/AdminViewRecurrencePlans"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/ViewMessages"/>
         <property name="context-root" value="DigitalHealthcare"/>
         <property name="java-output-path" value="/DigitalHealthcare/target/classes"/>
     </wb-module>
